# prime_gao_angie

./: LICENSE  pyproject.toml
prime_jg4729/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
prime_jg4729/docs/: Makefile  conf.py  example.ipynb  make.bat
prime_jg4729/src/prime_jg4729/: __init__.py
prime_jg4729/tests/: prime_jg4729.py  test_prime_jg4729.py
