[tool.poetry]
name = "prime-jg4729"
version = "0.1.0"
description = "python package that eases the pain of concatenating pandas categoricals"
authors = ["Angie Gao <jg4729@columbia.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.group.dev.dependencies]
sphinx = "^5.0"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
