[tool.poetry]
name = "prime_jg4729"
version = "0.1.0"
description = "this is a package made for mds homework7 and will be used to ease the pain of concatenating Pandas categoricals"
authors = ["Angie Gao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
